--- a/index.html
+++ b/index.html
@@ -85,11 +85,17 @@
     </section>
     </main>
     <footer>
-        <a href="" lang="en">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <p lang="en">info@example.com</p>
-        <p>+38 099 111 11 11</p>
-        <img src="./images/footer-bg.jpg" alt="footer" width="1600">
+        <section>
+            <a href="" lang="en">WebStudio</a>
+            <address>
+            <ul>
+                <li><a href="https://goo.gl/maps/v7KqHqCivUXDigUB9" target="_blank" rel="noopener, noindex, nofollow">г. Киев, б-р Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@example.com" lang="en">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+            </address>
+            <img src="./images/footer-bg.jpg" alt="footer" width="1600">
+        </section>
     </footer>
 </body>
 </html>
