--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </main>
     <footer>
         <section>
-            <a href="" lang="en">WebStudio</a>
+            <h2 lang="en">WebStudio</h2>
             <address>
             <ul>
                 <li><a href="https://goo.gl/maps/v7KqHqCivUXDigUB9" target="_blank" rel="noopener, noindex, nofollow">г. Киев, б-р Леси Украинки, 26</a></li>
