--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
             </ul>
     </header>
     <main>
-    <div>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>   
-            </section>
-    </div>
-    <img src="./images/основа.jpg" alt="основа" width="1600"/>
-    <section>
-        <!--<h2>описание</h2>-->
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>   
+        </section>
+        <section>
+        <h2>описание</h2>
         <ul>
             <li>
                 <h3>Внимание к деталям</h3>
@@ -85,17 +82,14 @@
     </section>
     </main>
     <footer>
-        <section>
-            <h2 lang="en">WebStudio</h2>
+            <a href="" lang="en">WebStudio</a>
             <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/v7KqHqCivUXDigUB9" target="_blank" rel="noopener, noindex, nofollow">г. Киев, б-р Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" lang="en">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
+                <ul>
+                    <li><a href="https://goo.gl/maps/v7KqHqCivUXDigUB9" target="_blank" rel="noopener, noindex, nofollow">г. Киев, б-р Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@example.com" lang="en">info@example.com</a></li>
+                    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul>
             </address>
-            <img src="./images/footer-bg.jpg" alt="footer" width="1600">
-        </section>
     </footer>
 </body>
 </html>
